tests/ui/transmutability/visibility/assume/should_accept_if_dst_has_unreachable_field.stderr
error[E0446]: private type `dst::Zst` in public interface
  --> $DIR/should_accept_if_dst_has_unreachable_field.rs:32:9
   |
LL |     #[repr(C)] pub(self) struct Zst; // <- unreachable type
   |                -------------------- `dst::Zst` declared as private
...
LL |         pub(in super) field: Zst,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ can't leak private type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0446`.
